<?xml version="1.0" encoding="utf-8"?><!--
   Copyright 2016 Google LLC

   Licensed under the Apache License, Version 2.0 (the "License");
   you may not use this file except in compliance with the License.
   You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

   Unless required by applicable law or agreed to in writing, software
   distributed under the License is distributed on an "AS IS" BASIS,
   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
   See the License for the specific language governing permissions and
   limitations under the License.
-->
<resources>
  <string name="app_name" translatable="false">Ooba Taxi</string>
  <string name="depth_use_explanation" translatable="false">When Depth is enabled on supported devices, virtual objects adapt to the environment by blending in with the real world.</string>
  <string name="button_text_enable_depth" translatable="false">Enable</string>
  <string name="button_text_disable_depth" translatable="false">Disable</string>
  <string name="options_title_with_depth" translatable="false">Your device supports depth</string>
  <string name="options_title_without_depth" translatable="false">Your device does not support depth</string>
  <string name="done" translatable="false">Done</string>
  <string-array name="depth_options_array" translatable="false">
    <item>Enable depth</item>
    <item>Show depth map</item>
  </string-array>
  <string name="options_title_instant_placement" translatable="false">Instant Placement options</string>
  <string-array name="instant_placement_options_array" translatable="false">
    <item>Enable Instant Placement</item>
  </string-array>
  <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_button">Login</string>
    <string name="create_account_button">Create Account</string>
    <string name="login_email">Email:</string>
  <string name="login_password">Password:</string>
    <string name="logout_button">Logout</string>
  <string name="edit_account_button">Edit Account</string>
  <string name="delete_account_button">Delete Account</string>
    <string name="edit_email">New Email:</string>
  <string name="edit_password">New Password:</string>
    <string name="save_changes_button">Save Changes</string>
  <string name="cancel_button">Cancel</string>
    <string name="current_email">Current Email:</string>
  <string name="current_password">Current Password:</string>

</resources>
